--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-left: 80px;
         }
         .logo img {
             width: 150px; /* Noch größer als zuvor */
@@ -87,8 +88,10 @@
             <p>Viscan GmbH</p>
         </div>
         <div class="qr-code">
-            <img src="Scin-App-content\frame.png" alt="QR-Code zum Herunterladen der App">
-            <p>Hier mit dem iPhone scannen</p>
+           <figure>
+              <img src="Scin-App-content\frame.png" alt="QR-Code zum Herunterladen der App">
+              <figcaption>Hier mit dem iPhone scannnen</figcaption>
+            </figure>
         </div>
     </div>
     <div class="carousel-container">
