--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         }
         .qr-code img {
             width: 220px; /* Größerer QR-Code */
+            margin-right: 25px;
         }
         .carousel-container {
             width: 100%;
